--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,47 @@ p {
 	border-style: none none none none;
 }
 
+.MessageOtherBottom, .MessageOtherTop, .MessageOther, .MessageMe, .MessageMeTop, .MessageMeBottom {
+	width: fit-content;
+	height: fit-content;
+	position: relative;
+	background: #555;
+	border-radius: 10px;
+	margin-top: 1px;
+	margin-bottom: 1px;
+}
+
+.MessageMeTop {
+	float: right;
+	clear: both;
+	margin-right: 25px;
+	padding-right: 25px;
+	padding-left: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border-bottom-right-radius: 5px;
+	border-top-right-radius: 15px;
+}
+
+.MessageMeBottom {
+	width: fit-content;
+	height: fit-content;
+	position: relative;
+	float: right;
+	clear: both;
+	margin-right: 25px;
+	padding-right: 25px;
+	padding-left: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border-radius: 10px;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 15px;
+	background: #555;
+	margin-top: 1px;
+	margin-bottom: 1px;
+}
+
 .MessageMe {
 	width: fit-content;
 	height: fit-content;
@@ -31,28 +72,76 @@ p {
 	padding-left: 10px;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	border-radius: 4px;
 	background: #555;
+	margin-top: 1px;
+	margin-bottom: 1px;
+	border-radius: 10px;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
 
 .MessageOther {
 	clear: right;
 	text-align: left;
-	width: fit-content;
-	height: fit-content;
-	position: relative;
 	left: 25px;
 	padding-left: 25px;
 	padding-right: 10px;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	border-radius: 4px;
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
+	margin-top: 1px;
+	margin-bottom: 1px;
 	background: #555;
+}
+
+.MessageOtherTop {
+	clear: right;
+	text-align: left;
+	left: 25px;
+	padding-left: 25px;
+	padding-right: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border-radius: 10px;
+	border-bottom-left-radius: 5px;
+	border-top-left-radius: 15px;
+	margin-top: 1px;
+	margin-bottom: 1px;
+	background: #555;
+}
+
+.MessageOtherBottom {
+	clear: right;
+	text-align: left;
+	left: 25px;
+	padding-left: 25px;
+	padding-right: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 15px;
+}
+
+.StatusTextMe {
+	color: #555;
+	font-size: 10px;
+	float: right;
+	clear: both;
+	margin-right: 25px;
+}
+
+.StatusTextOther {
+	color: #555;
+	font-size: 10px;
+	float: left;
+	clear: both;
+	margin-left: 25px;
 }
 
 .AllMessages {
 	overflow-y: scroll;
-	height: 80vh;
+	height: 85vh;
 }
 
 .MessagePreview {
@@ -75,8 +164,8 @@ p {
 
 .MessageBoxInput {
 	position: fixed;
-	width: 90%;
-	left: 5%;
+	width: 95vw;
+	left: 2.5vw;
 	bottom: 5vh;
 	background-color: rgb(81, 81, 81);
 	border: rgb(31, 31, 31);
@@ -88,11 +177,16 @@ p {
 
 .SendMessageButton {
 	position: fixed;
-	width: 3vh;
-	height: 3vh;
-	left: 96%;
+	left: 2.5vw;
 	bottom: 5vh;
+	width: 4vh;
+	height: 4vh;
+	right: 2vw;
+	bottom: 4.5vh;
 	text-align: center;
+	border-radius: 2vh;
+	background-color: rgb(104, 61, 212);
+	border: 5px solid rgb(104, 61, 212);
 }
 
 .NewChatButton {
@@ -114,10 +208,29 @@ p {
 	border-radius: 3px;
 }
 
+.SettingsButton {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	height: 2.5vh;
+	width: 2.5vh;
+	border-radius: 8px;
+	background-color: rgb(104, 61, 212);
+	border: 3px solid rgb(104, 61, 212);
+	text-align: center;
+	transition-duration: 0.4s;
+}
+
+.SettingsButton:hover {
+	background-color: rgb(134, 91, 244);
+	border: 3px solid rgb(134, 91, 244);
+	border-radius: 3px;
+}
+
 .SquareButton {
 	position: absolute;
-	top: 40px;
-	left: 40px;
+	top: 20px;
+	left: 20px;
 	height: 2.5vh;
 	width: 2.5vh;
 	border-radius: 8px;
@@ -189,4 +302,18 @@ p {
 .ErrorText {
 	color: red;
 	font-size: 1vh;
+}
+
+.GreenText {
+	color: green;
+	font-size: 1vh;
+}
+
+.AbsoluteTitle {
+	width: 100%;
+	background-color: #3d3c4d;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
