--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,120 @@ p {
 	margin: 0px;
 }
 
+.ReactionsOuterMe {
+	position: relative;
+	left: 100%;
+	width: 0;
+}
+
+.ReactionsMe {
+	margin-top: 5px;
+	margin-bottom: 5px;
+	width: 210px;
+	height: 30px;
+	right: 260px;
+	position: relative;
+	background-color: #403e51;
+	z-index: 1;
+	border-radius: 15px;
+}
+
+.ReactionsOuterOther {
+	position: relative;
+	width: 0;
+}
+
+.ReactionsOther {
+	margin-top: 5px;
+	margin-bottom: 5px;
+	width: 210px;
+	height: 30px;
+	left: 50px;
+	position: relative;
+	background-color: #403e51;
+	z-index: 1;
+	border-radius: 15px;
+}
+
+.Reaction {
+	width: 25px;
+	height: 25px;
+	margin: 2.5px;
+}
+
+.ReactionBackground {
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	margin: 0px;
+	border-radius: 15px;
+}
+
+.MessageReaction {
+	width: 20px;
+	height: 20px;
+	margin: 2.5px;
+}
+
+.MessageReactionBackground {
+	display: inline-block;
+	width: 25px;
+	height: 25px;
+	margin: 0px;
+	border-radius: 12.5px;
+}
+
+.MessageReactionsOuterMe {
+	width: fit-content;
+	height: 30px;
+	margin-left: auto;
+	margin-right: 50px;
+}
+
+.MessageReactionsOuterOther {
+	width: fit-content;
+	height: 30px;
+	margin-right: auto;
+	margin-left: 50px;
+}
+
+.MessageReactionOuter {
+	display: inline-block;
+}
+
+.MessageReactionInfo {
+	display: flex;
+	width: fit-content;
+	text-align: center;
+	background-color: #403e51;
+	padding-left: 5px;
+	padding-right: 5px;
+	position: absolute;
+	transform:translateX(-25%);
+	z-index: 1;
+	border-radius: 5px;
+	transition-duration: 0.4s;
+}
+
+.ReactionBackground:hover {
+	background-color: #57546d;
+}
+
+
+.MessageOuterMe {
+	margin-left: auto;
+	margin-right: 0;
+	width: fit-content;
+	display: flex;
+}
+
+.MessageOuterOther {
+	margin-right: auto;
+	margin-left: 0;
+	width: fit-content;
+	display: flex;
+}
+
 .MessageOtherBottom, .MessageOtherTop, .MessageOther, .MessageMe, .MessageMeTop, .MessageMeBottom {
 	width: fit-content;
 	height: fit-content;
@@ -24,13 +138,15 @@ p {
 	margin-top: 1px;
 	margin-bottom: 1px;
 	text-align: end;
+	display: inline-block;
+	/* max-width: 85%; */
 	
 }
 
 .MessageMeTop {
-	float: right;
+	/* float: right; */
 	clear: both;
-	margin-right: 25px;
+	margin-right: 10px;
 	padding-right: 25px;
 	padding-left: 10px;
 	padding-top: 5px;
@@ -40,9 +156,9 @@ p {
 }
 
 .MessageMeBottom {
-	float: right;
+	/* float: right; */
 	clear: both;
-	margin-right: 25px;
+	margin-right: 10px;
 	padding-right: 25px;
 	padding-left: 10px;
 	padding-top: 5px;
@@ -53,9 +169,9 @@ p {
 }
 
 .MessageMe {
-	float: right;
+	/* float: right; */
 	clear: both;
-	margin-right: 25px;
+	margin-right: 10px;
 	padding-right: 25px;
 	padding-left: 10px;
 	padding-top: 5px;
@@ -66,8 +182,8 @@ p {
 
 .MessageOther {
 	clear: both;
-	text-align: left;
-	left: 25px;
+	text-align: right;
+	left: 10px;
 	padding-left: 25px;
 	padding-right: 10px;
 	padding-top: 5px;
@@ -77,10 +193,14 @@ p {
 	background: #555;
 }
 
+.MessageOther:focus {
+	left: 50px;
+}
+
 .MessageOtherTop {
 	clear: both;
 	text-align: left;
-	left: 25px;
+	left: 10px;
 	padding-left: 25px;
 	padding-right: 10px;
 	padding-top: 5px;
@@ -92,7 +212,7 @@ p {
 .MessageOtherBottom {
 	clear: both;
 	text-align: left;
-	left: 25px;
+	left: 10px;
 	padding-left: 25px;
 	padding-right: 10px;
 	padding-top: 5px;
@@ -104,17 +224,18 @@ p {
 .StatusTextMe {
 	color: #555;
 	font-size: 10px;
-	float: right;
 	clear: both;
-	margin-right: 25px;
+	margin-right: 50px;
+	text-align: right;
 }
 
 .StatusTextOther {
 	color: #555;
 	font-size: 10px;
-	float: left;
+	/* float: left; */
 	clear: both;
-	margin-left: 25px;
+	margin-left: 50px;
+	text-align: left;
 }
 
 .AllMessages {
@@ -147,6 +268,61 @@ p {
 	width: fit-content;
 	color: rgb(123, 123, 123);
 	font-weight: normal;
+}
+
+.ProfilePicture {
+	width: 30px;
+	height: 30px;
+	border-radius: 15px;
+	position: relative;
+	/* clear: both; */
+	display: inline-block;
+	vertical-align: top;
+}
+
+.BigProfilePicture {
+	width: 300px;
+	height: 300px;
+	border-radius: 150px;
+	position: relative;
+	right: 150px;
+	font-size: 250px;
+	/* clear: both; */
+}
+
+.MessageUsername {
+	font-size: 10px;
+	position: relative;
+	text-align: left;
+	display: block;
+	left: 50px;
+	width: fit-content;
+}
+
+.BigProfilePictureImage {
+	width: 300px;
+	height: 300px;
+	border-radius: 150px;
+	position: relative;
+	font-size: 250px;
+}
+
+.ProfilePictureImage {
+	width: 30px;
+	height: 30px;
+	border-radius: 15px;
+	position: relative;
+	/* clear: both; */
+	display: inline-block;
+	vertical-align: top;
+}
+
+.ProfilePictureText {
+	margin-top: 0;
+	text-align: center;
+	height: 300px;
+	line-height: 300px;
+	display: block;
 }
 
 .MessageBoxInput {
